// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store:serverProcess:middlewares:documents:makeOnSaveView save view 1`] = `
Array [
  Object {
    "payload": Object {
      "saveAs": false,
      "viewId": "v1",
    },
    "type": "WS_ASK_SAVE_VIEW",
  },
  Object {
    "payload": Object {
      "absolutePath": "/absolute/path",
      "viewId": "v1",
    },
    "type": "SAVE_VIEW",
  },
]
`;

exports[`store:serverProcess:middlewares:documents:makeOnSaveView save view as (forced) 1`] = `
Array [
  Object {
    "payload": Object {
      "saveAs": true,
      "viewId": "v1",
    },
    "type": "WS_ASK_SAVE_VIEW",
  },
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {
      "options": Object {
        "filters": Array [
          Object {
            "extensions": Array [
              "vipv",
            ],
            "name": "PlotView",
          },
        ],
      },
      "type": "save",
      "windowId": "w1",
    },
    "type": "HSC_OPEN_DIALOG",
  },
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {
      "choice": "/the/chosen/one",
    },
    "type": "HSC_DIALOG_CLOSED",
  },
  Object {
    "payload": Object {
      "absolutePath": "/the/chosen/one",
      "viewId": "v1",
    },
    "type": "SAVE_VIEW",
  },
]
`;

exports[`store:serverProcess:middlewares:documents:makeOnSaveView save view as (then cancel) 1`] = `
Array [
  Object {
    "payload": Object {
      "saveAs": true,
      "viewId": "v1",
    },
    "type": "WS_ASK_SAVE_VIEW",
  },
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {
      "options": Object {
        "filters": Array [
          Object {
            "extensions": Array [
              "vipv",
            ],
            "name": "PlotView",
          },
        ],
      },
      "type": "save",
      "windowId": "w1",
    },
    "type": "HSC_OPEN_DIALOG",
  },
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {},
    "type": "HSC_DIALOG_CLOSED",
  },
]
`;

exports[`store:serverProcess:middlewares:documents:makeOnSaveView save view as 1`] = `
Array [
  Object {
    "payload": Object {
      "saveAs": false,
      "viewId": "v2",
    },
    "type": "WS_ASK_SAVE_VIEW",
  },
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {
      "options": Object {
        "filters": Array [
          Object {
            "extensions": Array [
              "vipv",
            ],
            "name": "PlotView",
          },
        ],
      },
      "type": "save",
      "windowId": "w1",
    },
    "type": "HSC_OPEN_DIALOG",
  },
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {
      "choice": "/the/chosen/one",
    },
    "type": "HSC_DIALOG_CLOSED",
  },
  Object {
    "payload": Object {
      "absolutePath": "/the/chosen/one",
      "viewId": "v2",
    },
    "type": "SAVE_VIEW",
  },
]
`;
